# ChangeLog for app-emulation/virtualbox-guest-additions
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/virtualbox-guest-additions/ChangeLog,v 1.51 2010/08/06 23:54:31 polynomial-c Exp $

*virtualbox-guest-additions-3.2.8 (06 Aug 2010)

  06 Aug 2010; Lars Wendler <polynomial-c@gentoo.org>
  -virtualbox-guest-additions-3.2.4.ebuild,
  +virtualbox-guest-additions-3.2.8.ebuild:
  Version bump. Removed old.

  17 Jul 2010; Lars Wendler <polynomial-c@gentoo.org>
  -virtualbox-guest-additions-3.0.12.ebuild,
  -files/virtualbox-guest-additions-3.initd:
  Removed old.

  15 Jul 2010; Fabio Erculiani <lxnay@gentoo.org>
  virtualbox-guest-additions-3.2.4.ebuild,
  virtualbox-guest-additions-3.2.6.ebuild:
  drop app-emulation/emul-linux-x86-xlibs dependency from 3.2.x ebuilds, not
  needed

  14 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  virtualbox-guest-additions-3.1.8-r2.ebuild:
  stable x86, bug 320595

*virtualbox-guest-additions-3.2.6 (27 Jun 2010)

  27 Jun 2010; Lars Wendler <polynomial-c@gentoo.org>
  -virtualbox-guest-additions-3.2.2.ebuild,
  +virtualbox-guest-additions-3.2.6.ebuild:
  Version bump. Removed old. Thanks to tman who reported this in bug
  #325799.

  21 Jun 2010; Christoph Mende <angelos@gentoo.org>
  virtualbox-guest-additions-3.1.8-r2.ebuild:
  Stable on amd64 wrt bug #320595

  08 Jun 2010; Lars Wendler <polynomial-c@gentoo.org>
  +files/vboxguest-log-use-c99.patch,
  virtualbox-guest-additions-3.1.8-r2.ebuild,
  virtualbox-guest-additions-3.2.2.ebuild,
  virtualbox-guest-additions-3.2.4.ebuild,
  -files/virtualbox-guest-additions-5.initd,
  -files/virtualbox-guest-additions-6.initd:
  Added a patch from PaX Team (bug #298988). Removed unused files.

  08 Jun 2010; Lars Wendler <polynomial-c@gentoo.org>
  virtualbox-guest-additions-3.1.8-r2.ebuild,
  virtualbox-guest-additions-3.2.2.ebuild,
  virtualbox-guest-additions-3.2.4.ebuild: