@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/virtualbox-guest-additions/Attic/virtualbox-guest-additions-3.1.8-r2.ebuild,v 1.5 2010/07/14 13:08:54 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/virtualbox-guest-additions/Attic/virtualbox-guest-additions-3.1.8-r2.ebuild,v 1.6 2010/08/07 00:11:05 polynomial-c Exp $
 
 inherit eutils linux-mod
 
@@ -32,6 +32,7 @@ DEPEND="${RDEPEND}
 		>=dev-lang/yasm-0.6.2
 		sys-devel/bin86
 		sys-devel/dev86
+		sys-libs/pam
 		sys-power/iasl
 		X? ( x11-proto/renderproto )
 		!X? ( x11-proto/xproto )"
