@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/virtualbox-guest-additions/Attic/virtualbox-guest-additions-3.2.6.ebuild,v 1.2 2010/07/15 12:30:43 lxnay Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/virtualbox-guest-additions/Attic/virtualbox-guest-additions-3.2.6.ebuild,v 1.3 2010/08/07 00:11:05 polynomial-c Exp $
 
 inherit eutils linux-mod
 
@@ -31,6 +31,7 @@ DEPEND="${RDEPEND}
 		>=dev-lang/yasm-0.6.2
 		sys-devel/bin86
 		sys-devel/dev86
+		sys-libs/pam
 		sys-power/iasl
 		X? ( x11-proto/renderproto )
 		!X? ( x11-proto/xproto )"
